devops-s3-k8s-jenkins-project/k8s/ingress.yaml
# OPTIONAL: Use only if your cluster has an Ingress Controller & external Load Balancer
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins
  namespace: devops
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  rules:
    - host: jenkins.example.com   # replace with your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins
                port:
                  number: 8080
  # tls:
  #   - hosts:
  #       - jenkins.example.com
  #     secretName: jenkins-tls
